--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -57,8 +57,8 @@
     "language": "اللغة"
   },
   "hero": {
-    "title": "Fruit Exotic International Inc",
-    "subtitle": "من قلب كولومبيا إلى يديك — طازجة يمكنك الوثوق بها، جودة يمكنك تذوقها.",
+    "title": "Fruit Exotic Inc",
+    "subtitle": "من قلب كولومبيا إلى يديك — طازجة يمكنك الوثوق بها، وأينما كنت في العالم، دعنا نكون يدك اليمنى في كولومبيا.",
     "cta": "استكشف فواكهنا"
   },
   "about": {
@@ -117,7 +117,7 @@
   },
   "aboutUs": {
     "title": "من نحن",
-    "company": "إكزوتيك فروتس إنترناشيونال",
+    "company": "إكزوتيك فروتس إنك",
     "description1": "هو مصدرك الموثوق للفواكه الاستوائية والغريبة المميزة، المحصودة بعناية من أخصب مناطق كولومبيا.",
     "description2": "من خلال الشراكات القوية مع المزارعين المحليين، نضمن أن كل شحنة تقدم طازجة وجودة لا مثيل لها — مما يجلب التنوع البيولوجي الغني في كولومبيا مباشرة إلى السوق الخاص بك.",
     "learnMore": "تعلم المزيد عنا"
@@ -240,7 +240,7 @@
     },
     "story": {
       "title": "قصتنا",
-      "description1": "في شركة Fruit Exotic International Inc by I Defense، تبدأ كل فاكهة بقصة من الشغف والتقاليد.",
+      "description1": "في شركة Fruit Exotic Inc by I Defense، تبدأ كل فاكهة بقصة من الشغف والتقاليد.",
       "description2": "بدأت رحلتنا في كولومبيا منذ أكثر من سبع سنوات، مع هدف واحد في الاعتبار: مشاركة كنوز البلاد الاستوائية مع العالم.",
       "description3": "وراء كل مانجو أو ليمون أو مانجوستين يقف مزارعون يستيقظون مع الشمس، يعملون في الأرض بتفان وعناية. معرفتهم، المنقولة عبر الأجيال، تضمن زراعة كل فاكهة بشكل طبيعي، وحصادها يدوياً، ورعايتها بحب للأرض.",
       "description4": "من هذه البساتين، نواصل الرحلة - بغسل وفرز وتعبئة كل فاكهة بعناية لتلبية أعلى معايير الجودة. اليوم، تصل صادراتنا إلى شركاء في كندا وأوروبا والشرق الأوسط، مما يوفر الطازجة والأصالة في كل صندوق.",
@@ -272,7 +272,7 @@
     },
     "certifications": {
       "title": "شهادات الجودة",
-      "description": "كل شحنة تصدير من شركة Fruits Exotics International Inc. By I Defense مصحوبة بشهادة صحة نباتية رسمية. هذا يضمن أن كل فاكهة نقوم بتسليمها تلتزم بصرامة بمعايير سلامة الغذاء الدولية، مما يمنح عملاءنا الثقة في جودة وسلامة وأصالة منتجاتنا."
+      "description": "كل شحنة تصدير من شركة Fruits Exotics Inc. By I Defense مصحوبة بشهادة صحة نباتية رسمية. هذا يضمن أن كل فاكهة نقوم بتسليمها تلتزم بصرامة بمعايير سلامة الغذاء الدولية، مما يمنح عملاءنا الثقة في جودة وسلامة وأصالة منتجاتنا."
     },
     "companyValues": {
       "qualityFirst": {
@@ -333,7 +333,8 @@
       "behindScenes": "خلف الكواليس",
       "recipes": "الوصفات"
     },
-    "readMore": "اقرأ المزيد"
+    "readMore": "اقرأ المزيد",
+    "closeArticle": "إغلاق المقال"
   },
   "productDetails": {
     "mango": {
