--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -57,16 +57,16 @@
     "language": "Язык"
   },
   "hero": {
-    "title": "Fruit Exotic International Inc",
-    "subtitle": "Из сердца Колумбии в ваши руки — свежесть, которой вы можете доверять, качество, которое вы можете попробовать.",
+    "title": "Fruit Exotic Inc",
+    "subtitle": "Из сердца Колумбии в ваши руки — свежесть, которой вы можете доверять, и где бы вы ни находились в мире, позвольте нам быть вашей правой рукой в Колумбии.",
     "cta": "Изучите наши фрукты"
   },
   "about": {
-    "company": "Fruit Exotic International",
+    "company": "Fruit Exotic",
     "title": "От фермы к рынку",
     "story": "Наша история",
     "network": "Глобальная сеть",
-    "description": "Основанная увлеченными специалистами по фруктам, Fruit Exotic International соединяет производителей тропических фруктов с премиальными розничными торговцами по всему миру. После многих лет путешествий по тропическим регионам мы обнаружили невероятное разнообразие и качество экзотических фруктов, которые редко достигают глобальных рынков. Это вдохновило нас создать сеть, которая приносит эти сокровища напрямую требовательным клиентам."
+    "description": "Основанная увлеченными специалистами по фруктам, Fruit Exotic соединяет производителей тропических фруктов с премиальными розничными торговцами по всему миру. После многих лет путешествий по тропическим регионам мы обнаружили невероятное разнообразие и качество экзотических фруктов, которые редко достигают глобальных рынков. Это вдохновило нас создать сеть, которая приносит эти сокровища напрямую требовательным клиентам."
   },
   "mission": {
     "title": "Наша миссия",
@@ -79,7 +79,7 @@
     "title": "Кому мы служим?",
     "heading": "Глобальные партнеры",
     "description1": "Мы обслуживаем премиальных розничных торговцев, специализированные продуктовые магазины, высококлассные рестораны и оптовых дистрибьюторов, которые требуют лучшие экзотические фрукты. От бутиковых рынков, ищущих редкие сорта, до установленных сетей, желающих постоянное качество, мы обслуживаем предприятия, которые ценят превосходство.",
-    "description2": "Будь вы в Нью-Йорке, Лондоне или Токио, Fruit Exotic International гарантирует, что ваши клиенты испытают подлинный вкус тропического рая, доставленный свежим к вашей двери."
+    "description2": "Будь вы в Нью-Йорке, Лондоне или Токио, Fruit Exotic гарантирует, что ваши клиенты испытают подлинный вкус тропического рая, доставленный свежим к вашей двери."
   },
   "coreValues": {
     "title": "Наши основные ценности",
@@ -117,7 +117,7 @@
   },
   "aboutUs": {
     "title": "О нас",
-    "company": "Exotic Fruits International",
+    "company": "Exotic Fruits Inc",
     "description1": "является вашим надежным источником премиальных экзотических и тропических фруктов, тщательно собранных из самых плодородных регионов Колумбии.",
     "description2": "Благодаря крепким партнерствам с местными производителями, мы гарантируем, что каждая поставка доставляет непревзойденную свежесть и качество — принося богатое биоразнообразие Колумбии прямо на ваш рынок.",
     "learnMore": "Узнать больше о нас"
@@ -240,7 +240,7 @@
     },
     "story": {
       "title": "Наша история",
-      "description1": "В Fruit Exotic International Inc by I Defense каждый фрукт начинается с истории страсти и традиций.",
+      "description1": "В Fruit Exotic Inc by I Defense каждый фрукт начинается с истории страсти и традиций.",
       "description2": "Наше путешествие началось в Колумбии более семи лет назад с одной целью: поделиться тропическими сокровищами страны с миром.",
       "description3": "За каждым манго, лаймом или мангустином стоят фермеры, которые встают с солнцем, работая на земле с преданностью и заботой. Их знания, передаваемые из поколения в поколение, обеспечивают естественное выращивание каждого фрукта, сбор вручную и уход с любовью к земле.",
       "description4": "Из этих садов мы продолжаем путешествие - тщательно моя, сортируя и упаковывая каждый фрукт для соответствия высочайшим стандартам качества. Сегодня наш экспорт достигает партнеров в Канаде, Европе и на Ближнем Востоке, доставляя свежесть и подлинность в каждой коробке.",
@@ -272,7 +272,7 @@
     },
     "certifications": {
       "title": "Сертификаты качества",
-      "description": "Каждая экспортная поставка от Fruits Exotics International Inc. By I Defense сопровождается официальным фитосанитарным сертификатом. Это гарантирует, что каждый фрукт, который мы доставляем, строго соответствует международным стандартам безопасности пищевых продуктов, давая нашим клиентам уверенность в качестве, безопасности и подлинности наших продуктов."
+      "description": "Каждая экспортная поставка от Fruits Exotics Inc. By I Defense сопровождается официальным фитосанитарным сертификатом. Это гарантирует, что каждый фрукт, который мы доставляем, строго соответствует международным стандартам безопасности пищевых продуктов, давая нашим клиентам уверенность в качестве, безопасности и подлинности наших продуктов."
     },
     "companyValues": {
       "qualityFirst": {
@@ -333,7 +333,8 @@
       "behindScenes": "За кулисами",
       "recipes": "Рецепты"
     },
-    "readMore": "Читать далее"
+    "readMore": "Читать далее",
+    "closeArticle": "Закрыть статью"
   },
   "productDetails": {
     "mango": {
