--- a/public/locales/ur/common.json
+++ b/public/locales/ur/common.json
@@ -57,16 +57,16 @@
     "language": "زبان"
   },
   "hero": {
-    "title": "Fruit Exotic International Inc",
-    "subtitle": "کولمبیا کے دل سے آپ کے ہاتھوں تک — تازگی جس پر آپ بھروسہ کر سکتے ہیں، معیار جس کا آپ ذائقہ لے سکتے ہیں۔",
+    "title": "Fruit Exotic Inc",
+    "subtitle": "کولمبیا کے دل سے آپ کے ہاتھوں تک — تازگی جس پر آپ بھروسہ کر سکتے ہیں، اور دنیا میں جہاں کہیں بھی آپ ہوں، ہمیں کولمبیا میں آپ کا دایاں ہاتھ بننے دیں۔",
     "cta": "ہمارے پھلوں کو دیکھیں"
   },
   "about": {
-    "company": "Fruit Exotic International",
+    "company": "Fruit Exotic",
     "title": "کھیت سے مارکیٹ تک",
     "story": "ہماری کہانی",
     "network": "عالمی نیٹ ورک",
-    "description": "جذبہ مند پھلوں کے ماہرین کی طرف سے قائم کیا گیا، Fruit Exotic International دنیا بھر میں اشنکٹبندیی پھلوں کے کاشتکاروں اور پریمیم خوردہ فروشوں کے درمیان پل کا کام کرتا ہے۔ اشنکٹبندیی علاقوں میں سالوں کے سفر کے بعد، ہم نے غیر ملکی پھلوں کی ناقابل یقین تنوع اور معیار دریافت کیا جو شاذ و نادر ہی عالمی بازاروں تک پہنچتے ہیں۔ اس نے ہمیں ایک نیٹ ورک بنانے کی ترغیب دی جو ان خزانوں کو براہ راست ذائقہ دار گاہکوں تک پہنچاتا ہے۔"
+    "description": "جذبہ مند پھلوں کے ماہرین کی طرف سے قائم کیا گیا، Fruit Exotic دنیا بھر میں اشنکٹبندیی پھلوں کے کاشتکاروں اور پریمیم خوردہ فروشوں کے درمیان پل کا کام کرتا ہے۔ اشنکٹبندیی علاقوں میں سالوں کے سفر کے بعد، ہم نے غیر ملکی پھلوں کی ناقابل یقین تنوع اور معیار دریافت کیا جو شاذ و نادر ہی عالمی بازاروں تک پہنچتے ہیں۔ اس نے ہمیں ایک نیٹ ورک بنانے کی ترغیب دی جو ان خزانوں کو براہ راست ذائقہ دار گاہکوں تک پہنچاتا ہے۔"
   },
   "mission": {
     "title": "ہمارا مقصد",
@@ -79,7 +79,7 @@
     "title": "ہم کس کی خدمت کرتے ہیں؟",
     "heading": "عالمی شراکت دار",
     "description1": "ہم پریمیم خوردہ فروشوں، خصوصی کریانہ اسٹورز، اعلیٰ معیار کے ریستورانوں، اور تھوک تقسیم کاروں کی خدمت کرتے ہیں جو بہترین غیر ملکی پھلوں کا مطالبہ کرتے ہیں۔ نایاب اقسام کی تلاش میں بوتیک مارکیٹس سے لے کر مستقل معیار چاہنے والے قائم شدہ چین تک، ہم ایسے کاروباروں کی خدمت کرتے ہیں جو عمدگی کو اہمیت دیتے ہیں۔",
-    "description2": "چاہے آپ نیویارک، لندن، یا ٹوکیو میں ہوں، Fruit Exotic International اس بات کو یقینی بناتا ہے کہ آپ کے گاہک اشنکٹبندیی جنت کا اصل ذائقہ محسوس کریں، آپ کے دروازے پر تازہ فراہم کیا گیا۔"
+    "description2": "چاہے آپ نیویارک، لندن، یا ٹوکیو میں ہوں، Fruit Exotic اس بات کو یقینی بناتا ہے کہ آپ کے گاہک اشنکٹبندیی جنت کا اصل ذائقہ محسوس کریں، آپ کے دروازے پر تازہ فراہم کیا گیا۔"
   },
   "coreValues": {
     "title": "ہماری بنیادی اقدار",
@@ -117,7 +117,7 @@
   },
   "aboutUs": {
     "title": "ہمارے بارے میں",
-    "company": "Exotic Fruits International",
+    "company": "Exotic Fruits Inc",
     "description1": "پریمیم غیر ملکی اور اشنکٹبندیی پھلوں کے لیے آپ کا قابل اعتماد ذریعہ ہے، احتیاط سے کولمبیا کے سب سے زرخیز علاقوں سے کاٹا گیا۔",
     "description2": "مقامی کاشتکاروں کے ساتھ مضبوط شراکت داری کے ذریعے، ہم اس بات کو یقینی بناتے ہیں کہ ہر ترسیل بے مثال تازگی اور معیار فراہم کرے — کولمبیا کی بھرپور حیاتیاتی تنوع کو براہ راست آپ کی مارکیٹ تک لانا۔",
     "learnMore": "ہمارے بارے میں مزید جانیں"
@@ -240,7 +240,7 @@
     },
     "story": {
       "title": "ہماری کہانی",
-      "description1": "Fruit Exotic International Inc by I Defense میں، ہر پھل جذبے اور روایت کی کہانی سے شروع ہوتا ہے۔",
+      "description1": "Fruit Exotic Inc by I Defense میں، ہر پھل جذبے اور روایت کی کہانی سے شروع ہوتا ہے۔",
       "description2": "ہمارا سفر سات سال پہلے کولمبیا میں شروع ہوا، ایک مقصد کے ساتھ: ملک کے اشنکٹبندیی خزانوں کو دنیا کے ساتھ بانٹنا۔",
       "description3": "ہر آم، لائم، یا منگوسٹین کے پیچھے کسان ہیں جو سورج کے ساتھ اٹھتے ہیں، لگن اور محبت کے ساتھ مٹی میں کام کرتے ہیں۔ نسل در نسل منتقل ہونے والا ان کا علم یقینی بناتا ہے کہ ہر پھل قدرتی طور پر اگایا جائے، ہاتھ سے کاٹا جائے، اور زمین کی محبت کے ساتھ پالا جائے۔",
       "description4": "ان باغات سے، ہم سفر جاری رکھتے ہیں - احتیاط سے دھونا، چھانٹنا، اور ہر پھل کو پیک کرنا تاکہ اعلیٰ ترین معیار کے معیارات پورے ہوں۔ آج، ہماری برآمدات کینیڈا، یورپ، اور مشرق وسطیٰ میں شراکت داروں تک پہنچتی ہیں، ہر باکس میں تازگی اور اصلیت فراہم کرتی ہیں۔",
@@ -272,7 +272,7 @@
     },
     "certifications": {
       "title": "کوالٹی سرٹیفیکیشن",
-      "description": "Fruits Exotics International Inc. By I Defense سے ہر ایکسپورٹ شپمنٹ ایک آفیشل فائٹوسینٹری سرٹیفکیٹ کے ساتھ آتی ہے۔ یہ یقینی بناتا ہے کہ ہر پھل جو ہم فراہم کرتے ہیں بین الاقوامی فوڈ سیفٹی کے معیارات کے سخت مطابق پذیر ہے، ہمارے کلائنٹس کو ہماری مصنوعات کی کوالٹی، سیفٹی، اور اصلیت میں اعتماد فراہم کرتا ہے۔"
+      "description": "Fruits Exotics Inc. By I Defense سے ہر ایکسپورٹ شپمنٹ ایک آفیشل فائٹوسینٹری سرٹیفکیٹ کے ساتھ آتی ہے۔ یہ یقینی بناتا ہے کہ ہر پھل جو ہم فراہم کرتے ہیں بین الاقوامی فوڈ سیفٹی کے معیارات کے سخت مطابق پذیر ہے، ہمارے کلائنٹس کو ہماری مصنوعات کی کوالٹی، سیفٹی، اور اصلیت میں اعتماد فراہم کرتا ہے۔"
     },
     "companyValues": {
       "qualityFirst": {
@@ -333,7 +333,8 @@
       "behindScenes": "پردے کے پیچھے",
       "recipes": "ترکیبیں"
     },
-    "readMore": "مزید پڑھیں"
+    "readMore": "مزید پڑھیں",
+    "closeArticle": "مضمون بند کریں"
   },
   "productDetails": {
     "mango": {
