feedback hero section

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -39,7 +39,7 @@
     },
     "contact": {
       "title": "تواصل معنا",
-      "location": "ميديلين، كولومبيا",
+      "location": "مونتريال، كيبيك، كندا",
       "phone": "+57 123 456 7890",
       "email": "info@fruitexotic.com"
     },
