--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -39,7 +39,7 @@
     },
     "contact": {
       "title": "Get In Touch",
-      "location": "Medellín, Colombia",
+      "location": "Montréal, Québec, Canada",
       "phone": "+57 123 456 7890",
       "email": "info@fruitexotic.com"
     },
