--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -39,7 +39,7 @@
     },
     "contact": {
       "title": "Entre em Contato",
-      "location": "Medellín, Colômbia",
+      "location": "Montréal, Québec, Canadá",
       "phone": "+57 123 456 7890",
       "email": "info@fruitexotic.com"
     },
