--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -39,7 +39,7 @@
     },
     "contact": {
       "title": "Связаться с нами",
-      "location": "Медельин, Колумбия",
+      "location": "Монреаль, Квебек, Канада",
       "phone": "+57 123 456 7890",
       "email": "info@fruitexotic.com"
     },
