--- a/public/locales/ur/common.json
+++ b/public/locales/ur/common.json
@@ -39,7 +39,7 @@
     },
     "contact": {
       "title": "رابطے میں رہیں",
-      "location": "میڈیلن، کولمبیا",
+      "location": "مونٹریال، کیوبک، کینیڈا",
       "phone": "+57 123 456 7890",
       "email": "info@fruitexotic.com"
     },
